--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --project unit",
+    "test:e2e": "vitest run --project e2e",
+    "test:watch": "vitest --project unit",
+    "test:e2e:watch": "vitest --project e2e",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -20,10 +22,12 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "3.0.0",
     "@types/node": "22.15.21",
+    "@types/supertest": "6.0.3",
     "@vitest/coverage-v8": "3.1.4",
     "@vitest/ui": "3.1.4",
     "eslint": "8.57.1",
     "prisma": "6.8.2",
+    "supertest": "7.1.1",
     "tsup": "8.5.0",
     "tsx": "4.19.4",
     "typescript": "5.8.3",
